welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:32: error: reassignment to val
    if(s=0){
        ^